CS 536/pr5/tests/errors/misuse_of_array_subscript.minc
void main()
{
	//Attempt to use an array subscript on a non-array. (Pointers are not arrays.)
	int myInteger = 5;
	int someOtherInteger = myInteger[0];

	int* myPointer = &myInteger;
	int accessInt = myPointer[0];
}
